--- a/app/assets/style/_shop.scss
+++ b/app/assets/style/_shop.scss
@@ -64,6 +64,7 @@
     padding: 0 24px;
     li {
       margin-top: 8px;
+      width: 100%;
     }
     .material-icons {
       margin-top: 5px;
