--- a/app/assets/style/_valentine.scss
+++ b/app/assets/style/_valentine.scss
@@ -196,15 +196,17 @@
       }
     }
     .img {
-      width: 100%;
-      height: 400px;
+      // width: 100%;
+      // height: 400px;
+      width: 856px;
+      height: 520px;
     }
     .content {
       margin-top: 16px;
       margin-bottom: 0;
       li {
         margin-bottom: 40px;
-        width: 100%;
+        width: 856px;
       }
     }
   }
@@ -246,7 +248,7 @@
   }
   .tag {
     width: 25%;
-    .material-icons {
+    .material-symbols-outlined {
       font-size: 48px;
     }
     h3 {
